<resources>
    <string name="app_name">TrackWise</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="login_logo">Logo</string>
    <string name="login_login">LOGIN</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="not_yet_registered_signup">Not Yet registered? Signup</string>
    <string name="signup_id_number">ID Number</string>
    <string name="signup_fullname">Fullname</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_supervisor">Supervisor</string>
    <string name="signup_assistant_supervisor">Assistant Supervisor</string>
    <string name="signup_sign_up">SIGN UP</string>
    <string name="signup_already_registered_login">Already Registered? Login</string>
    <string name="forgot_password_logo">Logo</string>
    <string name="forgot_password_forgot_password">Forgot Password</string>
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_emai2">Email</string>
    <string name="signup_toggle_password_visibility">Toggle Password Visibility</string>
    <string name="signup_toggle_confirm_password_visibility">Toggle Confirm Password Visibility</string>
    <string name="login_login_toggle_password_visibility">Login Toggle Password Visibility</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="bottom_nav_history">History</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="todo">Todo</string>
    <string name="side_nav_home">Home</string>
    <string name="side_nav_profile">Profile</string>
    <string name="side_nav_analytics">Analytics</string>
    <string name="side_nav_about_us">About Us</string>
    <string name="side_nav_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_icon">Setting Icon</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="edp_code">EDP Code</string>
    <string name="subject">Subject</string>
    <string name="section">Section</string>
    <string name="instructor">Instructor</string>
    <string name="remarks">Remarks</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="profile_image">Profile Image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="birthdate">Birthdate</string>
    <string name="save">Save</string>
    <string name="about_us">About Us</string>
    <string name="about_us_description">About Us Description</string>
</resources>