<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/side_nav_home"
            android:title="@string/side_nav_home"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/side_nav_profile"
            android:title="@string/side_nav_profile" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/side_nav_analytics"
            android:title="@string/side_nav_analytics" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/side_nav_aboutus"
            android:title="@string/side_nav_about_us" />

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/side_nav_logout"
                android:title="@string/side_nav_logout"/>
        </menu>
    </item>
</menu>
