<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/signupLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo01" />

    <EditText
        android:id="@+id/signupIDNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/signup_id_number"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupLogo" />

    <EditText
        android:id="@+id/signupFullName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/signup_fullname"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupIDNumber" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/signup_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupFullName" />

    <!-- Password Field with Toggle -->
    <FrameLayout
        android:id="@+id/passwordFrameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupEmail">

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/signup_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/togglePasswordVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="12dp"
            android:src="@drawable/ic_visibility_off"
            android:contentDescription="@string/signup_toggle_password_visibility" />
    </FrameLayout>

    <!-- Confirm Password Field with Toggle -->
    <FrameLayout
        android:id="@+id/confirmPasswordFrameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordFrameLayout">

        <EditText
            android:id="@+id/signupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/signup_confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/toggleConfirmPasswordVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="12dp"
            android:src="@drawable/ic_visibility_off"
            android:contentDescription="@string/signup_toggle_confirm_password_visibility" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checkedButton="@id/radioAssistantSupervisor"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordFrameLayout">

        <RadioButton
            android:id="@+id/radioSupervisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_supervisor" />

        <RadioButton
            android:id="@+id/radioAssistantSupervisor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_assistant_supervisor" />
    </RadioGroup>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/signup_sign_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/signup_already_registered_login"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
