<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:contentDescription="@string/login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo01"
        tools:layout_editor_absoluteY="50dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginView"
        android:text="@string/login_login"
        android:textSize="50sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogo"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/logEmail"
        android:hint="@string/login_email"
        android:padding="12dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="280dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Password Field with Toggle -->
    <FrameLayout
        android:id="@+id/passwordFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logEmail"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/loginPassword"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:background="@drawable/edittext_border"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/toggleLoginPasswordVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="12dp"
            android:src="@drawable/ic_visibility_off"
            android:contentDescription="@string/login_login_toggle_password_visibility" />
    </FrameLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="LOGIN"
        android:backgroundTint="@color/navyblue"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/signupRedirect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordFrame"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassRedirect"
        android:text="@string/login_forgot_password"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_margin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupRedirect"
        android:text="@string/not_yet_registered_signup"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
