<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/gradient_background"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/forgotPassLogo"
        android:contentDescription="@string/forgot_password_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo01"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginView"
        android:text="@string/forgot_password_forgot_password"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassLogo"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassName"
        android:text="@string/forgot_password_email"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginView"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/forgotPassUsername"
        android:hint="@string/forgot_password_emai2"
        android:padding="12dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassButton"
        android:text="Reset Password"
        android:backgroundTint="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassUsername"
        tools:ignore="HardcodedText" />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassCancel"
        android:text="Cancel"
        android:backgroundTint="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassUsername"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>